--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ djongo==1.2.31
 pymongo==4.13.2
 pandas==2.3.1
 python-dotenv==1.1.1
+djangorestframework==3.15.2
+drf-yasg==1.21.7
+whitenoise==6.7.0
+setuptools>=68.0.0
+wheel>=0.42.0
+tqdm==4.66.4
